--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hot Pepper Challenge</title>
+  <title>Eating the Hottest Peppers LIVE</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
   
   <!-- Header -->
   <header>
-    <img src="logo.png" alt="Hot Pepper Challenge" class="logo">
+    <img src="logo.png" alt="Eating the Hottest Peppers LIVE" class="logo">
   </header>
 
   <!-- Stream Block -->
